--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -22,4 +22,5 @@
     })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+<script id="dsq-count-scr" src="//jiazhe0909-github.disqus.com/count.js"async></script>
 </div>
