--- a/_includes/style.css
+++ b/_includes/style.css
@@ -195,9 +195,14 @@ a.external:hover {
   text-shadow: rgba(255,255,255,0.5) 0 0 15px, rgba(255,255,255,0.5) 0 0 10px;
 }
 .index-wrapper .info-card h2 {
-  font-size: 10px;
+  font-size: 18px;
   color: #fff;
   margin-bottom: 20px;
+}
+.index-wrapper .info-card h3 {
+  font-size: 18px;
+  color: #000;
+  margin-bottom: 1px;
 }
 .index-wrapper .info-card a {
   margin: 0 15px;
